objects/DemoReport__c.object
<CustomObject>
    <description>国内：Notes来社報告（デモ・依頼試料）よりデータ連携
海外：都度入力</description>
    <fields>
        <fullName>ATT_EDS__c</fullName>
        <formula>IF ( INCLUDES(  Attachment1__c  , &quot;EDS&quot;) , 1, 0) + IF ( INCLUDES(   AttachmentSub__c  , &quot;EDS&quot;) , 1, 0) + IF ( INCLUDES(   Attachment3__c   , &quot;EDS&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATT_EDS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATT_STEM__c</fullName>
        <formula>IF ( INCLUDES( Attachment1__c , &quot;STEM&quot;) , 1, 0) + IF ( INCLUDES( AttachmentSub__c , &quot;STEM&quot;) , 1, 0) + IF ( INCLUDES( Attachment3__c , &quot;STEM&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATT_STEM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountExecutive__c</fullName>
        <label>営業担当者</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountFullName__c</fullName>
        <description>複数者入力(255文字)</description>
        <label>来社者</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <inlineHelpText>複数顧客有</inlineHelpText>
        <label>顧客名</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affilecation__c</fullName>
        <label>所属</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppsSpecialist__c</fullName>
        <label>アプリ担当者</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment1__c</fullName>
        <inlineHelpText>系列1に連動して表示</inlineHelpText>
        <label>アタッチメント1</label>
        <picklist>
            <controllingField>SeriesMain__c</controllingField>
            <picklistValues>
                <fullName>EDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EELS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tomography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDS tomography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>holography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cryo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA EDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA MCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA PCLI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA SXES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA mixcroscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA OMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA PMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA 粒子解析</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA 薄膜分析プログラム</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES エネルギー分散形X線分析装置</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES 結晶方位解析装置</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES トランスファベッセル</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES 反射電子検出器</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES 試料パーキング装置</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES 試料冷却破断装置</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS モノクロメーター</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS 深さ方向分析用試料駆動ユニット</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS トランスファベッセル</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS マイクロ分析ユニット</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS 試料観察光学顕微鏡</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS 磁場レンズシフター</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS バイアス印加帯電中和電子線源</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Attachment3__c</fullName>
        <label>アタッチメント3</label>
        <picklist>
            <controllingField>SeriesSub2__c</controllingField>
            <picklistValues>
                <fullName>EDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EELS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tomography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDS tomography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>holography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cryo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA EDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA MCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA PCLI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA SXES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA mixcroscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA OMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA PMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA 粒子解析</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA 薄膜分析プログラム</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES エネルギー分散形X線分析装置</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES 結晶方位解析装置</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES トランスファベッセル</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES 反射電子検出器</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES 試料パーキング装置</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES 試料冷却破断装置</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS モノクロメーター</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS 深さ方向分析用試料駆動ユニット</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS トランスファベッセル</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS マイクロ分析ユニット</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS 試料観察光学顕微鏡</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS 磁場レンズシフター</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS バイアス印加帯電中和電子線源</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AttachmentSub__c</fullName>
        <label>アタッチメント2</label>
        <picklist>
            <controllingField>SeriesSub__c</controllingField>
            <picklistValues>
                <fullName>EDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EELS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tomography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDS tomography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>holography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cryo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA EDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA MCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA PCLI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA SXES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA mixcroscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA OMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA PMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA 粒子解析</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMA 薄膜分析プログラム</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES エネルギー分散形X線分析装置</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES 結晶方位解析装置</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES トランスファベッセル</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES 反射電子検出器</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES 試料パーキング装置</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES 試料冷却破断装置</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS モノクロメーター</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS 深さ方向分析用試料駆動ユニット</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS トランスファベッセル</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS マイクロ分析ユニット</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS 試料観察光学顕微鏡</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS 磁場レンズシフター</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPS バイアス印加帯電中和電子線源</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AttachmentText__c</fullName>
        <inlineHelpText>該当アタッチメントが存在しない場合に入力</inlineHelpText>
        <label>アタッチメント(Text)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BranchRegion__c</fullName>
        <inlineHelpText>国内に関してはNotesにて選択リスト化</inlineHelpText>
        <label>支店／地域</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brunch__c</fullName>
        <inlineHelpText>国に連動して表示される。現状は日本のみ支店選択可能</inlineHelpText>
        <label>（未使用項目）支店</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>東京支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>名古屋支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>仙台支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>札幌支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>筑波支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>大阪支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>広島支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>福岡支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高松支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>横浜事務所</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coment__c</fullName>
        <inlineHelpText>4,000 characters.</inlineHelpText>
        <label>フリーコメント</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompetitionOther__c</fullName>
        <label>競合メーカー(Text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <inlineHelpText>ERPに登録されている競合メーカー</inlineHelpText>
        <label>競合メーカー</label>
        <picklist>
            <picklistValues>
                <fullName>Agilent　Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRUKER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COXEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GATAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLサイエンス</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEMTRON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHENOM　WORLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT(プラズマテック)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESCAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZEISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>アイテック</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>アドバンテスト</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>アプライド</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>アルバックファイ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>アロカ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>エリオニクス</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>キーエンス</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>クレステック</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>サーモフィッシャー</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>シスメックスＣＮＡ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>シーケノム</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>シーメンス</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ジャスコ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>テクノメディカ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>テクノラボ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ニューフレアテクノロジ―</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先責任者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>デモレポート</relationshipLabel>
        <relationshipName>DemoreportSNud</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Continent__c</fullName>
        <formula>CASE
(Country__c,
 &apos;Japan&apos; ,&apos;Japan&apos;
, &apos;CHINA&apos;,&apos;CHINA&apos;
, &apos;KOREA&apos;,&apos;ASIA&apos;
,&apos;SINGAPORE&apos;,&apos;ASIA&apos;
,&apos;AUSTRALIA&apos;,&apos;ASIA&apos;
,&apos;MALAYSIA&apos;,&apos;ASIA&apos;
,&apos;USA&apos;,&apos;USA&apos;
,&apos;CANADA&apos;,&apos;USA&apos;
,&apos;AFGHANISTAN&apos;,&apos;USA&apos;
,&apos;ARGENTINA&apos;,&apos;USA&apos;
,&apos;URUGUAY&apos;,&apos;USA&apos;
,&apos;ECUADOR&apos;,&apos;USA&apos;
,&apos;GUYANA&apos;,&apos;USA&apos;
,&apos;COLOMBIA&apos;,&apos;USA&apos;
,&apos;SURINAME&apos;,&apos;USA&apos;
,&apos;CHILE&apos;,&apos;USA&apos;
,&apos;PARAGUAY&apos;,&apos;USA&apos;
,&apos;BRAZIL&apos;,&apos;USA&apos;
,&apos;VENEZUELA&apos;,&apos;USA&apos;
,&apos;PERU&apos;,&apos;USA&apos;
,&apos;BOLIVIA&apos;,&apos;USA&apos;
,&apos;GERMANY&apos;,&apos;EU&apos;
,&apos;FRANCE&apos;,&apos;EU&apos;
,&apos;ITALY&apos;,&apos;EU&apos;
,&apos;U.K.&apos;,&apos;EU&apos;
,&apos;SPAIN&apos;,&apos;EU&apos;
,&apos;SLOVAKIA&apos;,&apos;EU&apos;
,&apos;ISRAEL&apos;,&apos;EU&apos;
,&apos;BELGIUM&apos;,&apos;EU&apos;
,&apos;AUSTRIA&apos;,&apos;EU&apos;
,&apos;POLAND&apos;,&apos;EU&apos;
,&apos;CZECH&apos;,&apos;EU&apos;
,&apos;CROATIA&apos;,&apos;EU&apos;
,&apos;SLOVENIA&apos;,&apos;EU&apos;
,&apos;NETHERLANDS&apos;,&apos;EU&apos;
,&apos;Other&apos;
)</formula>
        <inlineHelpText>Japan : Japan 
CHINA : CHINA
ASIA : KOREA,SINGAPORE,AUSTRALIA,MALAYSIA
USA : USA + South America
EU : OTHER</inlineHelpText>
        <label>Continent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Customer__c</fullName>
        <label>国（顧客）</label>
        <picklist>
            <picklistValues>
                <fullName>Japan</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>CHINA</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>FRANCE</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>GERMANY</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>U.K.</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>SINGAPORE</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>KOREA</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
                <color>#EFAE73</color>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
                <color>#57F17C</color>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN(DAHOMEY)</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA &amp; HERZEGOVINA</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
                <color>#2F5D85</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>この項目でセキュリティを実施。デモ起票者の国。</description>
        <inlineHelpText>この項目でセキュリティを実施。デモ起票者の国。</inlineHelpText>
        <label>国</label>
        <picklist>
            <picklistValues>
                <fullName>Japan</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>CHINA</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>FRANCE</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>GERMANY</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>U.K.</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>SINGAPORE</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>KOREA</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
                <color>#EFAE73</color>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
                <color>#57F17C</color>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN(DAHOMEY)</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA &amp; HERZEGOVINA</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateCompleted__c</fullName>
        <label>提出期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateFrom__c</fullName>
        <label>来社日(From)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTo__c</fullName>
        <label>来社日(To)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DemoImpression__c</fullName>
        <label>デモ印象</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <formula>text( CASE(MONTH(DateTo__c)  
        , 1,Year( DateTo__c ) -1
        ,  2,Year( DateTo__c ) -1
        ,  3,Year( DateTo__c ) -1
,Year( DateTo__c ))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreeComent__c</fullName>
        <inlineHelpText>4000文字入力可能</inlineHelpText>
        <label>コメント</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MA_Count__c</fullName>
        <label>MA_Count</label>
        <summaryForeignKey>Demoreport_Model_Attach__c.demoreport_no__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ManagementNo__c</fullName>
        <externalId>true</externalId>
        <label>Notes_共通管理№</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model1_edit__c</fullName>
        <formula>Model__r.Model_edit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>対象機種2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SeriesSub__c</field>
                <operation>equals</operation>
                <valueField>Model__c.Series__c</valueField>
            </filterItems>
            <filterItems>
                <field>Model__c.sel__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>デモレポート (対象機種2)</relationshipLabel>
        <relationshipName>Model2Td7Z</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>対象機種3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SeriesSub2__c</field>
                <operation>equals</operation>
                <valueField>Model__c.Series__c</valueField>
            </filterItems>
            <filterItems>
                <field>Model__c.sel__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>デモレポート (機種)</relationshipLabel>
        <relationshipName>Model3Qhp0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ModelText__c</fullName>
        <inlineHelpText>対象機種未登録時にテキスト入力？項目要否確認</inlineHelpText>
        <label>対象機種(TEXT)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ERP:分類から初期SETUP ※本体のみでOK?</inlineHelpText>
        <label>対象機種1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SeriesMain__c</field>
                <operation>equals</operation>
                <valueField>Model__c.Series__c</valueField>
            </filterItems>
            <filterItems>
                <field>Model__c.sel__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>デモレポート</relationshipLabel>
        <relationshipName>ModelTcmE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NegotiationNo__c</fullName>
        <label>受注予定№</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_ReportNo__c</fullName>
        <label>Notes_来社報告No</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_SampleNo__c</fullName>
        <label>Notes_依頼試料No</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_VisitNo__c</fullName>
        <label>Notes_来社管理No</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <formula>&quot;Demo&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_1_3__c</fullName>
        <formula>if(text(SeriesMain__c) = &quot;&quot;,&quot;&quot;, text(SeriesMain__c)) &amp; if( text(SeriesSub__c) = &quot;&quot;,&quot;&quot;,&quot;;&quot; &amp; text(SeriesSub__c))  &amp; if( text(SeriesSub2__c) = &quot;&quot; ,&quot;&quot;,&quot;;&quot; &amp; text(SeriesSub2__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group(1-3)</label>
        <type>Text</type>
    </fields>
</CustomObject>